# Design-Patterns

./: README.md
AbstractFactory/: CMakeLists.txt  HashtagFactory.cpp  HashtagFactory.h  HashtagRect.cpp  HashtagRect.h  HashtagRound.cpp  HashtagRound.h  NumeralFactory.cpp  NumeralFactory.h  NumeralRect.cpp  NumeralRect.h  NumeralRound.cpp  NumeralRound.h  Rect.cpp  Rect.h  Round.cpp  Round.h  Shape.h  ShapeFactory.h  main.cpp
Adapter/: CMakeLists.txt  Separator.cpp  Separator.h  Shape.cpp  Shape.h  Square.cpp  Square.h  Text.cpp  Text.h  Triangle.cpp  Triangle.h  TriangleFigure.cpp  TriangleFigure.h  main.cpp
Bridge/: CMakeLists.txt  Graphics.cpp  Graphics.h  HousePainter.cpp  HousePainter.h  Painter.cpp  Painter.h  StreamsGraphics.cpp  StreamsGraphics.h  StringsGraphics.cpp  StringsGraphics.h  main.cpp
Builder/: CMakeLists.txt  Painter.cpp  Painter.h  Picture.cpp  Picture.h  RealPainter.cpp  RealPainter.h  StatPainter.cpp  StatPainter.h  main.cpp
ChainOfResponsibility/: CMakeLists.txt  Element.cpp  Element.h  ElementA.cpp  ElementA.h  ElementB.cpp  ElementB.h  ElementC.cpp  ElementC.h  Handler.cpp  Handler.h  main.cpp
Command/: Button.cpp  Button.h  CMakeLists.txt  Command.h  Menu.cpp  Menu.h  NewLineCommand.cpp  NewLineCommand.h  Picture.cpp  Picture.h  PrintCommand.cpp  PrintCommand.h  main.cpp
Composite/: CMakeLists.txt  Pen.cpp  Pen.h  Penal.cpp  Penal.h  Pencil.cpp  Pencil.h  component.h  main.cpp
Decorator/: CMakeLists.txt  Component.h  Decorator.cpp  Decorator.h  StarBorderedDecorator.cpp  StarBorderedDecorator.h  TextPrinter.cpp  TextPrinter.h  Worker.cpp  Worker.h  main.cpp
Facade/: CMakeLists.txt  Coder.cpp  Coder.h  Decoder.cpp  Decoder.h  KeyHolder.cpp  KeyHolder.h  SimpleCrypto.cpp  SimpleCrypto.h  main.cpp
Factory Method/: Application.cpp  Application.h  CMakeLists.txt  Dialog.cpp  Dialog.h  EvilApplication.cpp  EvilApplication.h  EvilDialog.cpp  EvilDialog.h  KindApplication.cpp  KindApplication.h  KindDialog.cpp  KindDialog.h  main.cpp
Flyweight/: CMakeLists.txt  Character.cpp  Character.h  CharacterFactory.cpp  CharacterFactory.h  main.cpp
Iterator/: CMakeLists.txt  List.cpp  List.h  ListIterator.cpp  ListIterator.h  main.cpp
Mediator/: Axe.cpp  Axe.h  CMakeLists.txt  Mediator.cpp  Mediator.h  Tree.cpp  Tree.h  Watering.cpp  Watering.h  WoodTool.cpp  WoodTool.h  main.cpp
Memento/: CMakeLists.txt  Person.cpp  Person.h  PersonMemento.cpp  PersonMemento.h  main.cpp
Observer/: CMakeLists.txt  ClockDisplay.cpp  ClockDisplay.h  Line.cpp  Line.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  Timer.cpp  Timer.h  main.cpp
Prototype/: CMakeLists.txt  Flower.cpp  Flower.h  Flowerbed.cpp  Flowerbed.h  main.cpp
Proxy/: CMakeLists.txt  Element.cpp  Element.h  TextElement.cpp  TextElement.h  TextProxy.cpp  TextProxy.h  main.cpp  text
Singleton/: CMakeLists.txt  Printer.cpp  Printer.h  main.cpp
State/: CMakeLists.txt  CloseState.cpp  CloseState.h  Connection.cpp  Connection.h  ConnectionState.cpp  ConnectionState.h  OpenState.cpp  OpenState.h  main.cpp
Strategy/: CMakeLists.txt  EstimateByMax.cpp  EstimateByMax.h  EstimateByMean.cpp  EstimateByMean.h  EstimateByMinMax.cpp  EstimateByMinMax.h  EstimateStrategy.h  Estimator.cpp  Estimator.h  main.cpp
Visitor/: CMakeLists.txt  CharElement.cpp  CharElement.h  Element.cpp  Element.h  LetterStatisticVisitor.cpp  LetterStatisticVisitor.h  MeanVisitor.cpp  MeanVisitor.h  NumberElement.cpp  NumberElement.h  Visitor.cpp  Visitor.h  main.cpp
(+8 files in other folders)
